--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,30 @@ html, body {
   background: #0a0a0a;
   color: #f3f4f6;
 }
+
+@layer utilities {
+  @keyframes blink {
+    0%, 100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+  }
+
+  .animate-blink {
+    animation: loading 0.8s step-end infinite;
+  }
+
+  @keyframes loading {
+    0% {
+      transform: translateX(-100%)
+    }
+    100% {
+      transform: translate(250%);
+    }
+  }
+  .animate-loading-bar {
+    animation: loading 0.8s ease infinite;
+  }
+}
