--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,14 @@ html, body {
     animation: loading 0.8s ease infinite;
   }
 }
+
+.reveal {
+  opacity: 0;
+  transform: translate(20px);
+  transition: opacity 0.7s ease, transform 0.7s ease;
+}
+
+.reveal.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
